--- a/main-backend/package.json
+++ b/main-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc -b && node dist/src/index.js",
     "dev": "nodemon src/index.ts"
   },
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
-    "prisma": "^7.0.1"
+    "prisma": "^7.0.1",
+    "ts-node": "^10.9.2"
   }
 }
