--- a/worker/package.json
+++ b/worker/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@types/nodemailer": "^7.0.4",
     "dotenv": "^17.2.3",
     "kafkajs": "^2.2.4",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3"
   },
   "devDependencies": {
